--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Little Bookshop</title>
 
-  <!-- Link to external CSS -->
+  <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
 
   <!-- Google Font -->
@@ -66,5 +66,8 @@
   <footer id="contact">
     <p>&copy; 2025 Little Bookshop | 123 Story Lane, Booktown</p>
   </footer>
+
+  <!-- Link to JavaScript file -->
+  <script src="script.js"></script>
 </body>
 </html>
